# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  06 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Fix PPPoA usage, #144194 thanks to Giampaolo Tomassoni.

    iproute2 netlink check has been moved to the ebuild.

    When stopping a ppp link, don't remove the IP address, #145034.

  05 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    wpa_supplicant packet socket checks have been moved to the ebuild.

    Merged more vserver changes from Benedikt Boehm as vserver can now mount.

  03 Sep 2006; Roy Marples <uberlord@gentoo.org>:

    Document RC_QUIET.
    We now buffer e* messages when in parallel so we can display them properly
    (ie, init scripts don't mess up the display).

  30 Aug 2006; Mike Frysinger <vapier@gentoo.org>:

    Change the default cdrom fstab entry to use the udev/old name /dev/cdrom 
    and set fs type to auto #145142 by Matt Courney/Chris Gianelloni.

  23 Aug 2006; Mike Frysinger <vapier@gentoo.org>:

    Add RC_DMESG_LEVEL for people to control the dmesg console loglevel at boot
    time #142810 by Viktors Rotanovs.

    If /etc/conf.d/rc-extra exists, source it at the top of `rc` so users can
    inject whatever catches their fancy #144892 by Deadpan110.

  22 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Critical services are now defined as RC_CRITICAL_SERVICES in /etc/conf.d/rc
    We also force svcdir to /lib/rcscripts/init.d so we can mount it as tmpfs
    so we can run depscan early. This means we can run every init script
    through our generic functions and they get full dependencies. Fixes #70009.

    Above changes require irqbalance needing its own init script.

  21 Aug 2006; Roy Marples <uberlord@gentoo.org>:

    Each dhcp client now supports global options - ie dhcpcd="-a"

    Classical IP over ATM support has been added, #108153 thanks to
    Giampaolo Tomassoni. Note that he will not support the module and no